# AngleGauge

./: .gitignore  CMakeLists.txt  README.md
src/: cutSceen.cpp  detector.cpp  main.cpp
